dynamic jar loading dziala!!!!111oneoneone :D
git-svn-id: https://kask.eti.pg.gda.pl/svn/kernelhive/KernelHive/src@488 1473d755-6451-4e3e-83a9-0691c74848a3